<resources>
    <string name="app_name">Blueberry Pi</string>
    <string name="search_nearby_devices">Search nearby devices</string>
    <string name="Connect">Connect</string>
    <string name="send">Send</string>
    <string name="connexion_success">Connexion successful with&#160;</string>
    <string name="paired_devices">Known Devices</string>
    <string name="other_devices">Other Devices</string>
    <string name="connexion_with_host_ended">Connexion with Raspberry Pi was lost</string>
    <string name="device_discovery_finished">Device discovery finished</string>
    <string name="looking_for_nearby_devices">Looking for nearby devices …</string>
    <string name="no_device_selected">No device selected</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="default_byte_value">000</string>
    <string name="disconnect">Disconnect</string>
    <string name="Discovery_finished">Device Discovery Finished !</string>
    <string name="update_paired_devices">Update paired devices</string>
    <string name="connexion_failed">Connexion has failed</string>
    <string name="save_and_start">Save and Start</string>
    <string name="add_bit_R">AddBitIn</string>
    <string name="add_byte_R">AddByteIn</string>
    <string name="add_bit_W">AddBitOut</string>
    <string name="add_byte_W">AddByteOut</string>
    <string name="k_remove">remove</string>
    <string name="k_del">Del</string>
    <string name="k_load">load</string>
    <string name="k_save">save</string>
    <string name="k_refresh">refresh</string>
    <string name="k_change_nip">Change Nip</string>
    <string name="k_save_and_start">Save and Start</string>
    <string name="k_disconnect">Disconnect</string>
    <string name="update_all_inputs">Update All Inputs</string>
    <string name="inputs">Inputs</string>
    <string name="bit">Bit</string>
    <string name="pin_nb">PIN #1 :&#009;</string>
    <string name="byte_1">Byte 1 :&#009;</string>
    <string name="byte_2">Byte 2 :&#009;</string>
    <string name="byte_3">Byte 3 :&#009;</string>
    <string name="Byte">Byte</string>
    <string name="value_0_255">value(0&#8211;255)</string>
    <string name="outputs">Outputs</string>
    <string name="show_gpio_hint">Show GPIO Hint</string>
    <string name="hide_gpio_hint">Hide GPIO Hint</string>
    <string name="connexion">Connexion</string>
    <string name="actual_configuration">Actual Configuration</string>
    <string name="configs_on_rpi">Configurations on Raspberry PI</string>
    <string name="close_app">Close App</string>
    <string name="change_config">Change Config</string>
    <string name="enter_configname_here">Enter ConfigName here</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="default_name">Default Name</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>

</resources>
