<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="NestedWeights,TooManyViews"
    tools:context=".Configuration"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:orientation="vertical"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn01"
                style="@style/AppTheme.radiobutton.red"/>
            <RadioButton
                android:id="@+id/rbtn02"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn03"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn04"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn05"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn06"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn07"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn08"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn09"
                style="@style/AppTheme.radiobutton.red"/>
            <RadioButton
                android:id="@+id/rbtn10"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn11"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn12"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn13"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn14"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn15"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn16"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn17"
                style="@style/AppTheme.radiobutton.red"/>
            <RadioButton
                android:id="@+id/rbtn18"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn19"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn20"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn21"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn22"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn23"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn24"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn25"
                style="@style/AppTheme.radiobutton.red"/>
            <RadioButton
                android:id="@+id/rbtn26"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn27"
                style="@style/AppTheme.radiobutton.red"/>
            <RadioButton
                android:id="@+id/rbtn28"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn29"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn30"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn31"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn32"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn33"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn34"
                style ="@style/AppTheme.radiobutton.red"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn35"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn36"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn37"
                style="@style/AppTheme.radiobutton.green"/>
            <RadioButton
                android:id="@+id/rbtn38"
                style ="@style/AppTheme.radiobutton.green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/rbtn39"
                style="@style/AppTheme.radiobutton.red" />
            <RadioButton
                android:id="@+id/rbtn40"
                style ="@style/AppTheme.radiobutton.green" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="75"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical"
            android:background="@drawable/border">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:hint="@string/enter_configname_here"
                android:longClickable="false"
                android:background="@color/cornflower_blue">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btn_ajouter_bit_R"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_bit_R"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_ajouter_byte_R"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_byte_R"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btn_ajouter_bit_W"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_bit_W"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_ajouter_byte_W"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_byte_W"
                        android:textSize="20sp" />
                </LinearLayout>



            </LinearLayout>

            <ListView
                android:id="@+id/listview_elements"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:divider="#000"
                android:dividerHeight="1dp"
                android:listSelector="@color/lime_green"
                android:background="@drawable/border">
            </ListView>

            <Button
                android:id="@+id/btn_remove"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/k_remove"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                android:text="@string/configs_on_rpi"
                android:background="@color/cornflower_blue">
            </TextView>

            <ListView
                android:id="@+id/listview_confignames"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:divider="#000"
                android:dividerHeight="1dp"
                android:listSelector="@color/lime_green"
                android:background="@drawable/border">
            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btn_load"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/k_load"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btn_refresh"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/k_refresh"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/k_save"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btn_delete"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/k_del"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>
                <Button
                    android:id="@+id/btn_save_and_start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:text="@string/save_and_start"
                    android:textSize="20sp">

                </Button>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>